fixtures/errors/missing_comment.s
.name "missing comment"
live %3301
